# sentence-embedding-dataframe-cache

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  all_requirements.txt  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  embestore.rst  embestore.store.rst  index.rst  modules.rst
embedding_models/jina/: client.py  docker-compose.yml  flow.yml
embedding_models/jina/executor/: Dockerfile  config.yml  executor.py  requirements.txt
embedding_store/: base.py  jina.py  torch.py  version.py
embestore/: base.py  jina.py  torch.py  utils.py  version.py
embestore/cli/: main.py  serve.py
embestore/store/: base.py  jina.py  torch.py
examples/: using_jina_model_as_service.ipynb  using_torch_local_model.ipynb
scripts/: release.py
tests/: conftest.py  test_embedding_store.py  test_utils.py
tests/store/: conftest.py  test_embedding_store.py
