[tool.poetry]
name = "embedding-store"
version = "0.1.0"
description = ""
authors = ["Yoshi Gao <yoshi4868686@gmail.com>"]
readme = "README.md"
packages = [{include = "embedding_store"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
